@@ -1,3 +1,9 @@
+Sat Aug 30 20:05:41 2008  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* win32/win32.c (rb_w32_open, rb_w32_read, rb_w32_write): fallback to
+	  MSVCRT if text mode is specified. this case will not be used from
+	  ruby itself.
+
 Sat Aug 30 19:49:38 2008  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/win32.c (rb_w32_read): EOF is not error.
